samples/_failures_safe/1761248032_cebacc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4684701.c:166:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  166 | void initialize_state_machine
      | ^~~~
